@@ -2,6 +2,7 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * nickserv is now "self-learning"
  * Reduce number of files generated by configure
  * Modules can now be compiled into ctrlproxy as well as being built as shared
  libraries
